MDEV-8831 : enforce_storage_engine doesn't block table creation on other nodes

Check if the engine is supported/allowed before replicating the
statement.